--- a/aip.tex
+++ b/aip.tex
@@ -1572,7 +1572,8 @@ Also note that because $\collapse{A}$ is a monomial matrix, the inequality $\col
    \[\collapse{A} = \begin{bmatrix}5&3&4\\ 2&8&5\end{bmatrix}. \]
    As $q$ ranges from $1$ to $17$, $\collapse{A}\tail{\vv{s}}_q$ ranges over seventeen different positive lattice points.
    For each of those, the value of $\ip$ is either $0$ or $1$, and the point $(k + \val\ip, k, -2k)$ is feasible, and therefore optimal for $\ip$, for each $k \in \NN$.
-   This shows that, even though $\collapse{A}(\opt \ip)$ is always finite, as shown in \Cref{finite image: P}, the optimal set for $\ip$ may be infinite.
+   This shows that the optimal set for $\ip$ may be infinite.
+   In \Cref{finite image: P} we will show, however, that $\collapse{A}(\opt \ip)$ is always finite. 
 \end{example}
 
 
